# sfapi-sdm

./: Dockerfile  README.md  pyproject.toml
sfapi_sdm/: main.py
tests/: test_sfapi_sdm.py
